fix social items on tablet

--- a/webroot/css/responsive.css
+++ b/webroot/css/responsive.css
@@ -776,7 +776,7 @@
 	    padding-bottom: 8px;
 	}
 
-	.icon-social, .icon-irc, .icon-social-q {
+	.icon-irc, .icon-social-q {
 		margin-bottom: 30px;
 	}
 
